2010-01-10  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Genweights: use netCDF2 (64bit) for large remap weights files [request Daniel Goll]
	
2010-01-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added module Fourier
	* Detrend: OpenMP parallelization

2009-12-23  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remapcon, remaplaf: speed up by fast store of links

2009-12-15  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Version 1.4.1 released

2009-12-14  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Vertint: set default table number to 0
	
2009-12-10  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Ensstat: change vlistCompare to func_sftn
	
2009-11-30  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* merge, mergetime: don't overwrite existing files
	
2009-11-27  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New operator: splittabnum - Split parameter table numbers

2009-11-19  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* showtime: removed output of date, only print time string hh:mm:ss
	* convert date and time to string for printing

2009-11-12  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New operator: sethalo - Set the left and right bounds of a field
	* change number of input streams from unlimited to 1 in pipes
	* rename module Select to Selvar
	* rename selgridname/selzaxisname to selgrid/selzaxis
	* added operator vct2
	* Selvar: abort if no variable is selected
	
2009-11-08  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added default zaxis name "surface"
	
2009-11-04  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* setgridtype: added parameter regular to convert reduced gaussian grids
	* gridFromFile: check floating point parameter

2009-11-03  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remap: bug fix for weights from gennn (set remap_extrapolate = TRUE) [report: Helmut Frank]

2009-11-02  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* gridFromNCfile: lock call to nc_open (race condition) [report: Nils Fischer]
